<resources>
    <string name="app_name">极课同学</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">极课同学欢迎您</string>
    <string name="register">注册</string>
    <string name="enter">登入</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username"> 极课号/手机号</string>
    <string name="password"> 密码</string>
    <string name="password2"> 请再次输入你的用户密码</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="forget_password">忘记密码？</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="subject">科目</string>
    <string name="grade">年级</string>
    <string name="clazz">班级</string>
    <string name="top_example">TOP榜</string>
    <string name="totle_message">共计 0 题</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="tag">标签</string>
    <string name="title_activity_collate">CollateActivity</string>
    <string name="new_note">新建整理本</string>
    <string name="send_authcode">发送验证码</string>
    <string name="argee_register">轻触上面的"注册"按钮,即表示你同意《极课软件许可及服务协议》</string>
    <string name="please_enter_telephone">请填写手机号码</string>
    <string name="please_enter_authcode">请输入验证码</string>
    <string name="please_enter_password">请输入您的密码</string>
    <string name="title_activity_bind">BindActivity</string>
    <string name="what_is_jike">极课号是什么？</string>
    <string name="please_enter_jikenum">请输入您的极课号</string>
    <string name="forget_jikenum">忘记极课号?</string>
    <string name="test_home">没有极课号，立即体验</string>
    <string name="title_activity_checkinfor">Checkinfor</string>
    <string name="check_personal_infor">核对个人信息</string>
    <string name="school">学校:</string>
    <string name="schoolname">江苏省梅村高级中学</string>
    <string name="gradename">高一</string>
    <string name="classname">文科班（地，史）</string>
    <string name="telephonenumber">18061566788</string>
    <string name="title_activity_bindtelephone">BindtelephoneActivity</string>
    <string name="bindtelephone">绑定手机号</string>
    <string name="from">来源：</string>
    <string name="print_all">打印全部</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notebook">NotebookActivity</string>
    <string name="title_activity_print">PrintActivity</string>
    <string name="wait_for_print">待打印100题</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting">设置</string>
    <string name="user">我</string>
    <string name="new_message">新消息通知</string>
    <string name="find">发现</string>
    <string name="about_jike">关于极课</string>
    <string name="exit">注销</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="change">更换</string>
    <string name="check_answer">查看解析</string>
    <string name="remark">添加备注</string>
    <string name="back_subject">上一题</string>
    <string name="next_subject">下一题</string>
    <string name="title_activity_addwrongtag">AddwrongtagActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="relate_tag">相关标签</string>
    <string name="recommend_tag">推荐</string>
    <string name="title_activity_remark">RemarkActivity</string>
    <string name="wrong">看错了小数点位数...</string>
    <string name="title_activity_dialognewbook">DialognewbookActivity</string>
    <string name="input_name">正在输入...</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">搜索</string>
    <string name="empty_list_msg">No Results</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_top_rank">TopRankActivity</string>
    <string name="title_activity_achievement">AchievementActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_check_result">CheckResultActivity</string>
    <string name="title_activity_time_search">TimeSearch</string>
    <string name="title_activity_changepassword">Changepassword</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
    <string name="ic_drive_spreadsheet">&#xe083;</string>
    <string name="ic_drive_video">&#xe084;</string>
    <string name="ic_drive_zip">&#xe085;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_error">&#xe088;</string>
    <string name="ic_event">&#xe089;</string>
    <string name="ic_exit_to_app">&#xe08a;</string>
    <string name="ic_expand_less">&#xe08b;</string>
    <string name="ic_expand_more">&#xe08c;</string>
</resources>