<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.fclassroom.activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"
        android:layout_marginTop="20dp"
        android:background="@color/background_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:text="+86" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_size"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/please_enter_telephone"
                android:inputType="number"
                android:paddingLeft="@dimen/margin_size"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/please_enter_authcode"
                android:inputType="number"
                android:paddingLeft="@dimen/margin_size"
                android:singleLine="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_size"
                android:layout_weight="1"
                android:background="@drawable/button_select"
                android:singleLine="true"
                android:text="@string/send_authcode" />
        </LinearLayout>

        <com.fclassroom.app.widget.XEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_size"
            android:background="@color/white"
            android:drawableRight="@drawable/eye_close"
            android:hint="@string/please_enter_password"
            android:inputType="numberPassword"
            android:paddingLeft="@dimen/margin_size"
            android:paddingRight="@dimen/margin_size"
            android:singleLine="true" />

        <Button
            android:id="@+id/bn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_select"
            android:gravity="center"
            android:text="@string/register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size"
            android:layout_marginRight="@dimen/margin_size"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/argee_register"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>