<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.fclassroom.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        app:theme="@style/Theme.AppCompat">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/listviewitem_select"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/icon_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_new_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/listviewitem_select"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_message"
            android:textSize="@dimen/text_size" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@drawable/listviewitem_select"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/icon_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_aboutjike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:background="@drawable/listviewitem_select"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_jike"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/icon_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/listviewitem_select"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/exit"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</LinearLayout>
