<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.fclassroom.activity.StartActivity" >

    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="极课同学"
            android:textColor="@color/grey"
            android:textSize="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="欢迎您"
            android:textColor="@color/grey_white"
            android:textSize="30dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/point_img"
        android:layout_above="@+id/button"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        android:src="@drawable/splash_1_point" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_select"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/enter" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_select"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>

</RelativeLayout>