<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.fclassroom.activity.BindActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="极课号绑定"
            android:textColor="@color/white"
            android:layout_gravity="center" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_jike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/what_is_jike"
        android:textColor="@color/blue" />
    
    <TextView
        android:id="@+id/tv_jikecontent"
        android:layout_width="328dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="极课号是什么。。。"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edit_jike_number"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:padding="@dimen/margin_size"
        android:hint="极课号"
        android:background="@drawable/edittext_select2"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/forget_jikenum" />

    <com.fclassroom.app.widget.XEditText
        android:id="@+id/edit_jike_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/edittext_select2"
        android:hint="密码"
        android:drawableRight="@drawable/eye_close"
        android:inputType="textPassword"
        android:padding="@dimen/margin_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/forget_password" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bn_bind"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_size"
            android:background="@drawable/button_select_enter"
            android:textColor="@color/white"
            android:text="绑定"/>

        <TextView
            android:id="@+id/tv_testjike"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:drawableRight="@drawable/icon_right"
            android:text="@string/test_home" />

    </RelativeLayout>


</LinearLayout>
