<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_color"
    tools:context="com.fclassroom.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_size"
        android:paddingRight="@dimen/margin_size">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_enter"/>

        <TextView
            android:id="@+id/logo_iv"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/jikestudent"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_iv"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:hint="@string/username"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_size"
                android:background="@color/white"
                android:ems="10"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_getpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <Button
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_select_enter"
                android:text="进入极课同学"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="#88ffffff" />

                <LinearLayout
                    android:id="@+id/linear_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_size"
                    android:layout_marginRight="@dimen/margin_size"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="或"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/qq"/>

                    <TextView
                        android:id="@+id/tv_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="QQ登入"
                        android:textColor="@color/white" />
                </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="#88ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>